--- a/CS Blogs/src/main/res/values/styles.xml
+++ b/CS Blogs/src/main/res/values/styles.xml
@@ -2,7 +2,9 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/csblogs_red</item>
+        <item name="colorPrimaryDark">@color/csblogs_red_dark</item>
+        <item name="colorAccent">@color/csblogs_red_accent</item>
     </style>
 
 </resources>
