add logo to action bar

--- a/CS Blogs/src/main/res/values/styles.xml
+++ b/CS Blogs/src/main/res/values/styles.xml
@@ -5,6 +5,12 @@
         <item name="colorPrimary">@color/csblogs_red</item>
         <item name="colorPrimaryDark">@color/csblogs_red_dark</item>
         <item name="colorAccent">@color/csblogs_red_accent</item>
+        <item name="actionBarStyle">@style/AppTheme.ActionBar</item>
     </style>
 
+    <style name="AppTheme.ActionBar" parent="Widget.AppCompat.Light.ActionBar">
+        <item name="background">@color/csblogs_red</item>
+        <item name="logo">@drawable/csblogs_text_logo</item>
+        <item name="displayOptions">useLogo|showHome</item>
+    </style>
 </resources>
