--- a/CS Blogs/src/main/res/layout/blog_post_card.xml
+++ b/CS Blogs/src/main/res/layout/blog_post_card.xml
@@ -5,7 +5,7 @@
             android:id="@+id/card_view"
             android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="240dp"
+            android:layout_height="wrap_content"
             card_view:cardCornerRadius="2dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
