--- a/CS Blogs/src/main/res/layout/activity_main.xml
+++ b/CS Blogs/src/main/res/layout/activity_main.xml
@@ -4,13 +4,20 @@
                 android:layout_height="match_parent"
                 tools:context="com.csblogs.csblogsandroid.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/card_recycler_view"
-            android:layout_width="match_parent"
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh_layout"
             android:layout_height="match_parent"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin">
+            android:layout_width="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/card_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
