--- a/CS Blogs/src/main/res/layout/blog_post_card.xml
+++ b/CS Blogs/src/main/res/layout/blog_post_card.xml
@@ -10,39 +10,65 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
 
-        <RelativeLayout
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
             <com.android.volley.toolbox.NetworkImageView
-                android:id="@+id/blog_image"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:scaleType="centerCrop">
+                    android:id="@+id/blog_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:scaleType="centerCrop">
             </com.android.volley.toolbox.NetworkImageView>
 
-            <TextView
-                android:id="@+id/title_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingBottom="4dp"
-                android:singleLine="true"
-                android:textColor="@android:color/primary_text_light"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:layout_below="@+id/blog_image"/>
+            <RelativeLayout
+                    android:id="@+id/title_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <com.csblogs.csblogsandroid.views.CircularNetworkImageView
+                        android:id="@+id/author_image"
+                        android:layout_centerVertical="true"
+                        android:layout_width="72dp"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="0dp"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:id="@+id/title_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp"
+                        android:layout_marginBottom="4dp"
+                        android:singleLine="true"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                        android:layout_toRightOf="@id/author_image"/>
+
+                <TextView
+                        android:id="@+id/author_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp"
+                        android:singleLine="true"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                        android:layout_below="@id/title_text"
+                        android:layout_toRightOf="@id/author_image"/>
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/summary_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingTop="0dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:textColor="@android:color/secondary_text_light"
+                android:paddingBottom="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:layout_below="@+id/title_text"/>
+                android:layout_below="@+id/title_container"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
