--- a/CS Blogs/src/main/res/values-v21/styles.xml
+++ b/CS Blogs/src/main/res/values-v21/styles.xml
@@ -1,10 +1,13 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/csblogs_red</item>
         <item name="colorPrimaryDark">@color/csblogs_red_dark</item>
         <item name="colorAccent">@color/csblogs_red_accent</item>
+
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
 </resources>
