--- a/CS Blogs/src/main/res/layout/activity_bloggers.xml
+++ b/CS Blogs/src/main/res/layout/activity_bloggers.xml
@@ -3,8 +3,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/bloggers_recycler_view"
+    <fragment
+            android:name="com.csblogs.csblogsandroid.fragments.BloggersFragment"
+            android:id="@+id/fragment_bloggers"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
