navigate between fragments using drawer

--- a/CS Blogs/src/main/res/layout/activity_main.xml
+++ b/CS Blogs/src/main/res/layout/activity_main.xml
@@ -18,9 +18,8 @@
                 android:background="?attr/colorPrimary"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-        <fragment
-                android:name="com.csblogs.csblogsandroid.fragments.LatestBlogsFragment"
-                android:id="@+id/fragment_latest_bloggers"
+        <FrameLayout
+                android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/toolbar"/>
