--- a/CS Blogs/src/main/res/layout/activity_main.xml
+++ b/CS Blogs/src/main/res/layout/activity_main.xml
@@ -16,7 +16,13 @@
                 android:layout_width="match_parent"
                 android:minHeight="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            <ImageView
+                    android:src="@drawable/csblogs_logo_text_1000"
+                    android:layout_width="200dp"
+                    android:scaleType="fitCenter"
+                    android:layout_height="?attr/actionBarSize"/>
+        </android.support.v7.widget.Toolbar>
 
         <FrameLayout
                 android:id="@+id/fragment_container"
