--- a/CS Blogs/src/main/res/layout/activity_main.xml
+++ b/CS Blogs/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
                 android:layout_width="match_parent"
                 android:minHeight="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
+                android:elevation="8dp"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
             <ImageView
                     android:src="@drawable/csblogs_logo_text_1000"
