--- a/CS Blogs/src/main/res/values-v21/styles.xml
+++ b/CS Blogs/src/main/res/values-v21/styles.xml
@@ -9,12 +9,13 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
 
-        <!-- enable window content transitions -->
         <item name="android:windowContentTransitions">true</item>
 
-        <!-- specify enter and exit transitions -->
         <item name="android:windowEnterTransition">@android:transition/explode</item>
         <item name="android:windowExitTransition">@android:transition/explode</item>
+
+        <item name="android:windowSharedElementEnterTransition">@transition/shared_elements_transition</item>
+        <item name="android:windowSharedElementExitTransition">@transition/shared_elements_transition</item>
 
     </style>
 
