--- a/CS Blogs/src/main/res/layout/fragment_latest_blogs.xml
+++ b/CS Blogs/src/main/res/layout/fragment_latest_blogs.xml
@@ -14,8 +14,8 @@
                 android:id="@+id/card_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin">
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
 
         </android.support.v7.widget.RecyclerView>
 
