--- a/CS Blogs/src/main/res/layout/blog_post_card.xml
+++ b/CS Blogs/src/main/res/layout/blog_post_card.xml
@@ -7,6 +7,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="2dp"
+            card_view:cardElevation="4dp"
             android:layout_margin="8dp">
 
         <LinearLayout
