--- a/CS Blogs/src/main/res/values/dimens.xml
+++ b/CS Blogs/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="blog_post_card_max_width">320dp</dimen>
+    <dimen name="blogger_grid_item_max_width">160dp</dimen>
 </resources>
