update blog post card view and use /users/<user_id> call to retrieve profile pictures

--- a/CS Blogs/src/main/res/layout/blog_post_card.xml
+++ b/CS Blogs/src/main/res/layout/blog_post_card.xml
@@ -67,7 +67,9 @@
                 android:paddingRight="16dp"
                 android:paddingBottom="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:layout_below="@+id/title_container"/>
+                android:layout_below="@+id/title_container"
+                android:ellipsize="end"
+                android:maxLines="6"/>
 
         </LinearLayout>
 
